# gRPC-CRUD

./: .gitignore  Cargo.toml  LICENSE.txt  build.rs
proto/: sqlcrud.proto
src/: client.rs  server.rs
tests/: parallelism.rs
