[package]
name = "gRPC_MySQL_CRUD"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }

[build-dependencies]
tonic-build = "0.9.2"